--- a/testpage.html
+++ b/testpage.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="testpage.css">
 </head>
 <body>
-<h1>IS 117 - 004 Marlon Egoavil - Test Page</h1>
+<h1>This is a test page.</h1>
 </body>
 </html>
